--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,12 +1,17 @@
+view {
+    box-sizing: border-box;
+}
+
 .container {
     background-color: #F2f2f2;
     overflow: hidden;
 }
 
-.swp{
+.swp {
     position: relative;
 }
-.seek{
+
+.seek {
     position: absolute;
     width: 100%;
     height: 60rpx;
@@ -15,31 +20,33 @@
     top: 0;
     left: 0;
     z-index: 9;
-    display:flex;
-    align-items:center;
-
+    display: flex;
+    align-items: center;
 }
-.seek_l{
+
+.seek_l {
     width: 586rpx;
     height: 100%;
     border-radius: 30px;
-    background:rgba(238, 238, 238, .2);
-    font-size:24rpx;
-    line-height:40rpx;
+    background: rgba(238, 238, 238, .2);
+    font-size: 24rpx;
+    line-height: 40rpx;
     text-align: center;
     position: relative;
-    color:rgba(255,255,255,1);
+    color: rgba(255, 255, 255, 1);
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.search{
+
+.search {
     position: absolute;
     left: 180rpx;
     top: 50%;
     transform: translateY(-50%);
 }
-.seek_r{
+
+.seek_r {
     width: 40rpx;
     height: 40rpx;
     margin-left: 40rpx;
@@ -96,30 +103,24 @@ swiper-item image {
 .venues_box {
     display: flex;
     margin-top: 20rpx;
+    flex-direction: column;
 }
 
-.venues_box>view {
-    box-sizing: border-box;
-    flex: auto;
-}
-.venues_r{
-    border-left:1px solid #F2f2f2;
-}
 .venues_content {
-    width: 100%;
+    width: 50%;
     height: 200rpx;
     display: flex;
     align-items: center;
     background: #fff;
     padding-left: 40rpx;
     box-sizing: border-box;
+    border-right: 1px solid #F2f2f2;
     border-bottom: 1px solid #F2f2f2;
 }
 
 .v_img {
     width: 150rpx;
     height: 150rpx;
-    /* background: #333; */
 }
 
 .v_info {
@@ -140,20 +141,41 @@ swiper-item image {
     line-height: 40rpx;
 }
 
-.venues_content_max {
-    width: 100%;
-    padding-top: 43rpx;
-    background: #fff;
-    padding-left: 40rpx;
-    box-sizing: border-box;
-    padding-bottom:15rpx;
-}
-
 .v_img_max {
     margin-top: 50rpx;
     height: 212rpx;
 }
 
+.venues_4 {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.venues_3 {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.venues_3 .venues_content_max {
+    width: 50%;
+    padding-top: 43rpx;
+    background: #fff;
+    padding-left: 40rpx;
+    padding-bottom: 15rpx;
+    border-right: 1px solid #eee;
+}
+
+.max_r {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.max_r .venues_content {
+    width: 100%;
+}
+
+/* 廣告 */
 
 .banner_info {
     margin-top: 20rpx;
@@ -169,16 +191,17 @@ swiper-item image {
 
 .banner_h1 {
     position: absolute;
-    font-size:36rpx;
-    font-family:PingFang-SC-Bold;
-    color:rgba(255, 255, 255, 1);
-    line-height:40rpx;
+    font-size: 36rpx;
+    font-family: PingFang-SC-Bold;
+    color: rgba(255, 255, 255, 1);
+    line-height: 40rpx;
     left: 42rpx;
     bottom: 37rpx;
 }
 
 /* scroll 品牌选择 */
-.section_box{
+
+.section_box {
     height: 160rpx;
     box-sizing: border-box;
     width: 100%;
@@ -186,44 +209,50 @@ swiper-item image {
     background: #fff;
     padding: 17rpx 24rpx 29rpx;
 }
-.scroll_view{
+
+.scroll_view {
     width: 100%;
     height: 100%;
 }
-.section_content{
+
+.section_content {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     text-align: center;
 }
-.section_logo{
+
+.section_logo {
     width: 25%;
     /* flex: auto; */
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    
 }
-.section_logo .section_img{
+
+.section_logo .section_img {
     width: 140rpx;
     height: 77rpx;
 }
-.section_logo .section_h1{
-    font-size:24rpx;
-    font-family:PingFang-SC-Medium;
-    color:rgba(102,102,102,1);
-    line-height:40rpx;
+
+.section_logo .section_h1 {
+    font-size: 24rpx;
+    font-family: PingFang-SC-Medium;
+    color: rgba(102, 102, 102, 1);
+    line-height: 40rpx;
 }
-.guide{
+
+.guide {
     position: absolute;
     right: 40rpx;
     bottom: 25rpx;
     display: flex;
     justify-content: center;
 }
-.guide>view{
+
+.guide>view {
     width: 14rpx;
     height: 10rpx;
     border-radius: 5rpx;
@@ -231,6 +260,7 @@ swiper-item image {
     transition: all .5s ease;
     margin-left: 8rpx;
 }
-.guide>view.action{
-   width: 30rpx;
+
+.guide>view.action {
+    width: 30rpx;
 }
