--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -219,8 +219,8 @@ swiper-item image {
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
-    text-align: center;
+    /* justify-content: center; */
+    /* text-align: center; */
 }
 
 .section_logo {
