--- a/pages/classify/index.wxss
+++ b/pages/classify/index.wxss
@@ -36,7 +36,7 @@ image{
   padding: 0 30rpx;
   display: flex;
   flex-wrap:wrap;
-  justify-content: center;
+  /* justify-content: center; */
 }
 .brand_info{
   width: 25%;
@@ -94,14 +94,22 @@ image{
   flex: 1;
   background: #fff;
   box-sizing: border-box;
+  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
+  padding-right: 30rpx;
 }
+
 .nav_right .nav_logo{
-  width: 143rpx;
-  height: 180rpx;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 33%;
+  box-sizing: border-box;
+  height: 210rpx;
   text-align: center;
-  float:left;
-  margin-top: 30rpx;
-  margin-left: 30rpx;
+  margin-top: 33rpx;
+  padding-left: 30rpx;
 }
 .nav_img{
   width: 100%;
