--- a/pages/index/activity/activity.wxml
+++ b/pages/index/activity/activity.wxml
@@ -1,23 +1,29 @@
 <import  src="/components/goodsList/list.wxml" />
 <view class="banner">
-  <image src="/images/activity_banner.png" />
+  <image src="{{objs.activity_info.activity_img}}" />
 </view>
 
 
 <view class="filtrate">
   <view class="fil_title">
-    <view class="fil_info opt">
+    <view class="fil_info {{sortId==0?'opt':''}}" data-sort="0" bindtap="sort">
       综合
     </view>
-    <view class="fil_info">
+    <view class="fil_info {{sortId==1?'opt':''}}" wx:if="{{sortId!=2}}" data-sort="1" bindtap="sort">
       价格
     </view>
-    <view class="fil_info">
+    <view class="fil_info {{sortId==2?'opt':''}}" wx:else data-sort="2" bindtap="sort">
+      价格
+    </view>
+    <view class="fil_info {{sortId==10?'opt':''}}" wx:if="{{sortId!=11}}" data-sort="10" bindtap="sort">
+      上新
+    </view>
+    <view class="fil_info {{sortId==11?'opt':''}}" wx:else data-sort="11" bindtap="sort">
       上新
     </view>
     <view class="fil_info">
       筛选
     </view>
   </view>
-  <template is="goodsList"></template>
+  <template is="goodsList" data="{{...objs}}"></template>
 </view>
