--- a/components/goodsList/list.wxss
+++ b/components/goodsList/list.wxss
@@ -49,6 +49,7 @@
   font-size: 20rpx;
   font-family: PingFang-SC-Medium;
   color: rgba(153, 153, 153, 1);
+  text-decoration: line-through;
   line-height: 30rpx;
 }
 
