--- a/pages/index/result/result.wxml
+++ b/pages/index/result/result.wxml
@@ -5,26 +5,32 @@
   <view class="search_box">
     <view class="searchTab"></view>
     <image class="search" style="width:18rpx;height:20rpx" src="/images/home/search2.png" />
-    <input type="text" style="height:100%;" placeholder="请输入商品名称" auto-focus />
+    <input type="text" style="height:100%;" confirm-type="search" placeholder="请输入商品名称" bindinput="bindinput" />
   </view>
 </view>
 
 <view class="filtrate">
   <view class="fil_title">
-    <view class="fil_info opt">
+    <view class="fil_info {{sortId==0?'opt':''}}" data-sort="0" bindtap="sort">
       综合
     </view>
-    <view class="fil_info">
+    <view class="fil_info {{sortId==1?'opt':''}}" wx:if="{{sortId!=2}}" data-sort="1" bindtap="sort">
       价格
     </view>
-    <view class="fil_info">
+    <view class="fil_info {{sortId==2?'opt':''}}" wx:else data-sort="2" bindtap="sort">
+      价格
+    </view>
+    <view class="fil_info {{sortId==10?'opt':''}}" wx:if="{{sortId!=11}}" data-sort="10" bindtap="sort">
+      上新
+    </view>
+    <view class="fil_info {{sortId==11?'opt':''}}" wx:else data-sort="11" bindtap="sort">
       上新
     </view>
     <view class="fil_info" bindtap="filtrate">
       筛选
     </view>
   </view>
-  <template is="goodsList"></template>
+  <template is="goodsList" data="{{...objs}}"></template>
     
 </view>
 
@@ -88,7 +94,7 @@
       <view class="btn_l">
         重置
       </view>
-      <view class="btn_r">
+      <view class="btn_r" bindtap="filtrateEnd">
         确定
       </view>
     </view>
