--- a/pages/index/result/result.wxml
+++ b/pages/index/result/result.wxml
@@ -41,6 +41,70 @@
         品牌
       </view>
       <view class="opt_list">
+        <view  wx:for="{{seekObj.hot_keywords}}" wx:key="index" class="opt_goods {{pinpaiOff==index?'active':''}}" data-cls="hot_keywords"  data-id="{{index}}" bindtap="ispl">
+          {{item.keywords}}
+        </view>
+      </view>
+    </view>
+    <view class="opt_info">
+      <view class="h1">
+        品类
+      </view>
+       <view class="opt_list">
+        <view  wx:for="{{seekObj.cate_list}}" wx:key="index" class="opt_goods {{pinleiOff==index?'active':''}}" data-cls="cate_list"  data-id="{{index}}" bindtap="ispl">
+          {{item.cate_name}}
+        </view>
+      </view>
+    </view>
+    <view class="opt_info">
+      <view class="h1">
+        价格
+      </view>
+      <view class="jg_box">
+        <view class='zdj'>
+          <input type="number" bindinput="zdj" placeholder="最低价"  />
+        </view>
+        <view class='xian'></view>
+        <view class='zgj'>
+          <input type="number" bindinput="zgj" placeholder="最高价"  />
+        </view>
+      </view>
+    </view>
+    <view class="opt_info">
+      <view class="h1">
+        新旧
+      </view>
+       <view class="opt_list">
+        <view  wx:for="{{seekObj.quality_list}}" wx:key="index" class="opt_goods {{qualityOff==index?'active':''}}" data-cls="quality_list"  data-id="{{index}}" bindtap="ispl">
+          {{item.quality_name}}
+        </view>
+      </view>
+    </view>
+    <view class="opt_info">
+      <view class="h1">
+        降价/分期
+      </view>
+      <view class="opt_list">
+        <view  wx:for="{{isfq}}" wx:key="index" class="opt_goods {{item.is?'active':''}}" data-cls="isfq"  data-id="{{index}}" bindtap="ispl">
+          {{item.name}}
+        </view>
+      </view>
+    </view>
+    <view class="btn">
+      <view class="btn_l">
+        重置
+      </view>
+      <view class="btn_r" bindtap="filtrateEnd">
+        确定
+      </view>
+    </view>
+  </view>
+  <!--<view class="options">
+    <view class="opt_info">
+      <view class="h1">
+        品牌
+      </view>
+      <view class="opt_list">
         <view  wx:for="{{pinpai}}" wx:key="index" class="opt_goods {{item.is?'active':''}}" data-cls="pinpai"  data-id="{{index}}" bindtap="ispl">
           {{item.name}}
         </view>
@@ -98,5 +162,5 @@
         确定
       </view>
     </view>
-  </view>
+  </view> -->
 </view>
