商品列表 跳转 详情

--- a/components/cart/cart.wxss
+++ b/components/cart/cart.wxss
@@ -29,7 +29,9 @@
 .affair {
   display: flex;
   justify-content: space-around;
+  padding: 0 48rpx;
   align-items: center;
+  box-sizing: border-box;
   width: 430rpx;
   background: rgba(194, 179, 135, 1);
   border-radius: 35px;
