--- a/app.wxss
+++ b/app.wxss
@@ -36,10 +36,10 @@ image {
     background: #fff;
 }
 .jinse {
-   background: linear-gradient(to right, RGBA(227, 211, 175, 1), RGBA(194, 179, 135, 1));
+   background: linear-gradient(to right, RGBA(227, 211, 175, 1), RGBA(194, 179, 135, 1)) !important;
 }
 .jinse:hover {
-   background: linear-gradient(to right, RGBA(227, 211, 175, 1), RGBA(194, 179, 135, 1));
+   background: linear-gradient(to right, RGBA(227, 211, 175, 1), RGBA(194, 179, 135, 1)) !important;
 }
 .icon{
     width: 22px;
