加入购物车

--- a/components/cart/cart.wxml
+++ b/components/cart/cart.wxml
@@ -8,7 +8,7 @@
       客服
     </view>
   </view>
-  <view class="car">
+  <view class="car" data-url="/pages/cart2/index" bindtap="toPage">
     <view class="car_logo">
       <image src="/images/gouwuche.png" />
     </view>
@@ -17,13 +17,13 @@
     </view>
   </view>
   <view class="affair">
-    <view class="add_cart" bindtap="addGwc">
+    <view class="add_cart" bindtap="addGwc" data-goodsid="{{goods_id}}">
       加入购物车
     </view>
     <view class="jiange">
 
     </view>
-    <view class="buy" bindtap="ljgm">
+    <view class="buy" bindtap="ljgm" data-goodsid="{{goods_id}}">
       立即购买
     </view>
   </view>
