--- a/pages/cart2/index.wxml
+++ b/pages/cart2/index.wxml
@@ -1,17 +1,17 @@
 
 <view class="body" wx:if="{{list.length>0}}">
-  <view class="title" bindtap="setGoods" wx:if="{{set==0}}" data-set="1">
+  <view class="title" bindtap="setStatus" wx:if="{{status==0}}" data-status="1">
     编辑商品
   </view>
-  <view class="title" bindtap="setGoods" wx:if="{{set==1}}" data-set="0">
+  <view class="title" bindtap="setStatus" wx:else data-status="0">
     完成
   </view>
   <view class="goods_list t20">
     <view class="goods" wx:for="{{list}}" wx:key="index">
-      <view wx:if="{{set==0}}" class="icon" bindtap="count" data-index="{{index}}">
+      <view wx:if="{{status==0}}" class="icon" bindtap="count" data-index="{{index}}">
         <icon wx:if="{{item.status}}" type="success" size="20" color="RGBA(194, 179, 135, 1)" />
       </view>
-      <view wx:if="{{set==1}}" class="icon" bindtap="setgoods" data-index="{{index}}">
+      <view wx:if="{{status==1}}" class="icon" bindtap="setgoods" data-index="{{index}}">
         <icon wx:if="{{item.set}}" type="success" size="20" color="RGBA(194, 179, 135, 1)" />
       </view>
       <view class="goods_logo">
@@ -36,23 +36,24 @@
 </view>
 <view class="btn">
   <view class="btn_l">
-    <view class="icon">
-      <icon wx:if="{{0}}" type="success" size="20" color="RGBA(194, 179, 135, 1)" />
+    <view class="icon" bindtap="all">
+      <icon wx:if="{{statuAll}}" type="success" size="20" color="RGBA(194, 179, 135, 1)" />
+      <icon wx:if="{{delAll}}" type="success" size="20" color="RGBA(194, 179, 135, 1)" />
     </view>
     <view class="quanxuan">
       全选
     </view>
-    <view class="heji" wx:if="{{set==0}}">
+    <view class="heji" wx:if="{{status==0}}">
       合计
     </view>
-    <view class="sum" wx:if="{{set==0}}">
+    <view class="sum" wx:if="{{status==0}}">
       ￥{{sum||0}}
     </view>
   </view>
-  <view class="jinse" wx:if="{{set==0}}" bindtap="end">
+  <view class="jinse" wx:if="{{status==0}}" bindtap="end">
     结算
   </view>
-  <view class="jinse {{set==1?'hui':''}}" wx:if="{{set==1}}">
+  <view class="jinse {{status==1?'hui':''}}" wx:if="{{status==1}}" bindtap="delGoods">
     删除
   </view>
 </view>
