--- a/pages/shop/order/orderList.wxml
+++ b/pages/shop/order/orderList.wxml
@@ -38,7 +38,7 @@
 <view class="zheke t20">
   <view class="yhq"  bindtap="toPage" data-url="/pages/my/card/card">
     <text>优惠券</text>
-    <text class="zk_num" wx:if="{{1}}">1张可用</text>
+    <text class="zk_num" wx:if="{{cardNum}}">{{cardNum}}张可用</text>
     <text class="zk_num" wx:else>暂无可用</text>
     <view class="jt">
       <image src="/images/dingdan_jt.png" />
@@ -46,7 +46,7 @@
   </view>
   <view class="hb" bindtap="toPage" data-url="/pages/my/hongb/hongb">
     <text>红包</text>
-    <text class="zk_num" wx:if="{{0}}">1张可用</text>
+    <text class="zk_num" wx:if="{{hbNum}}">hbNum张可用</text>
     <text class="zk_num" wx:else>暂无可用</text>
     <view class="jt">
       <image src="/images/dingdan_jt.png" />
