--- a/pages/user/index.wxss
+++ b/pages/user/index.wxss
@@ -2,70 +2,46 @@ page {
   background-color: #fff;
 }
 
+view {
+  box-sizing: border-box;
+}
+
 .get_user {
   position: fixed;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, .4);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.btn_box {
-  position: fixed;
-  left: 50%;
-  top: 40%;
-  width: 80%;
-  transform: translate(-50%, -50%);
-  background: #fff;
-  border-radius: 20rpx;
-  padding-top: 20rpx;
-  overflow: hidden;
+.banner {
+  width: 100%;
+  height: 909rpx;
 }
 
 .logo {
-  margin-top: 20rpx;
-  width: 80rpx;
-  height: 80rpx;
-  border-radius: 50%;
-  background: #999;
-  color: black;
-  overflow: hidden;
-  text-align: center;
-  line-height: 80rpx;
+  width: 114rpx;
+  height: 60rpx;
+  margin-top: 64rpx;
 }
 
-.btn_txt,
-.btn_ts {
-  line-height: 100rpx;
-}
-
-.btn_btn {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  border-top: 1px solid #999;
-}
-
-.btn_btn>button {
-  flex: auto;
-  padding: 0;
-  margin: 0;
-  border: none;
-  background: none;
-  border-radius: 0;
-}
-
-.btn_btn>button:hover {
-  background: none;
-  border-radius: 0;
+.getUserInfo:hover {
+  background-color: #fff;
 }
 
 .getUserInfo {
-  border-left: 1px solid #999;
-  box-sizing: border-box;
-}
-
-view {
-  box-sizing: border-box;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 64rpx;
+  width: 300rpx;
+  height: 70rpx;
+  border: 1px solid rgba(194, 179, 135, 1);
+  border-radius: 35rpx;
+  color: rgba(194, 179, 135, 1);
+  font-size: 30rpx;
 }
 
 .bind_phone {
