--- a/pages/shop/order/orderList.wxml
+++ b/pages/shop/order/orderList.wxml
@@ -1,5 +1,5 @@
 <view class="address_box">
-  <view class="xuanze isadd"  wx:if="{{address}}">
+  <view class="xuanze isadd" wx:if="{{address}}" bindtap="toPage" data-url="/pages/shop/site/site">
     <view class="name_tel">
       <text class="name">{{address.consignee}}</text>
       <text class="tel">{{address.phone}}</text>
@@ -8,7 +8,7 @@
       {{address.location}}{{address.detail_address}}
     </view>
   </view>
-   <view wx:else class="xuanze" bindtap="toPage" data-url="/pages/shop/site/add">
+  <view wx:else class="xuanze" bindtap="toPage" data-url="/pages/shop/site/add">
     <view class="add_dz">
       <image src="/images/dingdan_add.png" />
     </view>
@@ -18,7 +18,7 @@
     </view>
   </view>
   <view class="jt">
-      <image src="/images/dingdan_jt.png" />
+    <image src="/images/dingdan_jt.png" />
   </view>
 </view>
 
@@ -36,42 +36,48 @@
 </view>
 
 <view class="zheke t20">
-  <view class="yhq"  bindtap="toPage" data-url="/pages/my/card/card">
+  <view class="yhq" bindtap="{{cardNum?'toPage':''}}" data-url="/pages/my/card/is_card">
     <text>优惠券</text>
-    <text class="zk_num" wx:if="{{cardNum}}">{{cardNum}}张可用</text>
+    <view class="zk_num" wx:if="{{cardNum}}">
+      <text wx:if="{{!cardSum}}">{{cardNum}}张可用</text>
+      <text wx:else>-￥{{cardSum}}</text>
+    </view>
     <text class="zk_num" wx:else>暂无可用</text>
-    <view class="jt">
+    <view class="jt" wx:if="{{cardNum}}">
       <image src="/images/dingdan_jt.png" />
+    </view>
   </view>
-  </view>
-  <view class="hb" bindtap="toPage" data-url="/pages/my/hongb/hongb">
+  <view class="hb" bindtap="{{hbNum?'toPage':''}}" data-url="/pages/my/hongb/is_hongb">
     <text>红包</text>
-    <text class="zk_num" wx:if="{{hbNum}}">hbNum张可用</text>
+    <view class="zk_num" wx:if="{{hbNum}}">
+      <text wx:if="{{!hbSum}}">{{hbNum}}张可用</text>
+      <text wx:else>-￥{{hbSum}}</text>
+    </view>
     <text class="zk_num" wx:else>暂无可用</text>
-    <view class="jt">
+    <view class="jt" wx:if="{{hbNum}}">
       <image src="/images/dingdan_jt.png" />
+    </view>
   </view>
-  </view>
-  
+
 </view>
 
 <view class="money t20">
   <view>
     <text>商品金额</text>
-    <text class="mn_num isnum" >￥{{sum}}</text>
+    <text class="mn_num isnum">￥{{sum}}</text>
   </view>
   <view>
     <text>红包抵扣</text>
-    <text class="mn_num" >-￥0.00</text>
+    <text class="mn_num">-￥{{hbSum||0}}</text>
   </view>
   <view>
     <text>优惠券抵扣</text>
-    <text class="mn_num" >-￥0.00</text>
+    <text class="mn_num">-￥{{cardSum||0}}</text>
   </view>
 </view>
 
 <view class="submit">
-  <text>￥{{sum}}</text>
+  <text>￥{{endSum}}</text>
   <view class="submit_btn jinse" bindtap="submit">
     提交订单
   </view>
