--- a/components/cart/cart.wxss
+++ b/components/cart/cart.wxss
@@ -17,8 +17,16 @@
   align-items: center;
   justify-content: center;
   padding: 0 43rpx;
+  position: relative;
 }
-
+.service button{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  margin: 0;
+  padding: 0;
+}
 .service_logo,
 .car_logo {
   width: 40rpx;
