--- a/pages/shop/site/add.wxml
+++ b/pages/shop/site/add.wxml
@@ -14,7 +14,7 @@
      <input name="location" style="display:none" type="text" placeholder="请输入收货地址" value="{{address||info.location}}"  /> 
       <picker mode="region" bindchange="bindRegionChange" custom-item="请选择">
         <view class="picker">
-         {{address||info.location||'请选择地址'}}
+         {{address||info.location||'请选择省市区'}}
         </view>
       </picker>
     </view>
