--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -199,7 +199,20 @@ swiper-item image {
     width: 100%;
     height: 100%;
 }
-
+.banner_shade{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(
+      to bottom,
+      RGBA(0, 0, 0, 0),
+      RGBA(0, 0, 0, .1),
+      RGBA(0, 0, 0, 0.3),
+      RGBA(0, 0, 0, 0.7)
+    );
+}
 .banner_h1 {
     position: absolute;
     font-size: 36rpx;
@@ -208,6 +221,7 @@ swiper-item image {
     line-height: 40rpx;
     left: 42rpx;
     bottom: 37rpx;
+    z-index: 9;
 }
 
 /* scroll 品牌选择 */
